--- a/src/actions/develop/actions/E1 - Order.yaml
+++ b/src/actions/develop/actions/E1 - Order.yaml
@@ -98,15 +98,15 @@ fields:
     description: "Length 0-255 bytes. Signature for a message that lists out the target addresses and deposit address. Signature of (Contract PKH, Compliance Action, Authority Name, Asset Code, Supporting Evidence Hash, FreezePeriod, TargetAddresses, and DepositAddress)"
     type: varbin
 
-  - name: SupportingEvidenceHash
-    label: Supporting Evidence Hash
-    description: "SHA-256: warrant, court order, etc."
+  - name: DeprecatedSupportingEvidenceHash
+    label: Deprecated Supporting Evidence Hash
+    description: "Deprecated for new supporting evidence type and data fields. SHA-256: warrant, court order, etc."
     type: bin
     size: 32
 
-  - name: RefTxs
-    label: Ref Txs
-    description: "The request/response actions that were dropped.  The entire txn for both actions is included as evidence that the actions were accepted into the mempool at one point and that the senders (token/Bitcoin) signed their intent to transfer.  The management of this record keeping is off-chain and managed by the administration or operator to preserve the integrity of the state of the tokens. Only applicable for reconcilliation actions.  No subfield when F, T, R is selected as the Compliance Action subfield."
+  - name: DeprecatedRefTxs
+    label: Deprecated Ref Txs
+    description: "Deprecated for a new data format for reference transactions. The request/response actions that were dropped.  The entire txn for both actions is included as evidence that the actions were accepted into the mempool at one point and that the senders (token/Bitcoin) signed their intent to transfer.  The management of this record keeping is off-chain and managed by the administration or operator to preserve the integrity of the state of the tokens. Only applicable for reconcilliation actions.  No subfield when F, T, R is selected as the Compliance Action subfield."
     type: varbin
     varSize: medium
     notes: "Can be null.  Dropped actions that require a reconciliation action to fix the break in the chain are considered to be an extremely rare event."
@@ -123,3 +123,25 @@ fields:
     type: varchar
     varSize: medium
     example: "Compelled by a court order."
+
+  - name: SupportingEvidenceFormat
+    label: Supporting Evidence Format
+    description: "The data format of the supporting evidence field. 0 = no evidence data provided, 1 = markdown containing warrant, court order, etc."
+    type: uint
+    size: 1
+    options:
+      - 0
+      - 1
+
+  - name: SupportingEvidence
+    label: Supporting Evidence
+    description: "Supporting evidence related to the order being requested."
+    type: varbin
+    size: medium
+
+  - name: ReferenceTransactions
+    label: Reference Transactions
+    description: "The request/response actions that were dropped.  The entire txn for both actions is included as evidence that the actions were accepted into the mempool at one point and that the senders (token/Bitcoin) signed their intent to transfer.  The management of this record keeping is off-chain and managed by the administration or operator to preserve the integrity of the state of the tokens. Only applicable for reconcilliation actions.  No subfield when F, T, R is selected as the Compliance Action subfield."
+    type: ReferenceTransaction[]
+    listSize: medium
+    notes: "Can be null.  Dropped actions that require a reconciliation action to fix the break in the chain are considered to be an extremely rare event."
