NEX-205 Rename entity parent address to entity contract address.

--- a/src/actions/develop/types/Entity.yaml
+++ b/src/actions/develop/types/Entity.yaml
@@ -104,8 +104,7 @@ fields:
     varSize: tiny
     example: "tokenized.com"
 
-  - name: ParentAddress
-    label: Parent Address
-    description: "Address of parent contract. Refer to the entity specified in the contract at the address specified. When this field is present, no other fields should be included."
+  - name: EntityContractAddress
+    label: Entity Contract Address
+    description: "Address of entity contract. When the contract type is asset contract, or a child type, this field refers to the entity specified in the contract at the address specified. When this field is present, no other fields should be included in the entity."
     type: Address
-
