NEX-250 Minor updates to relationships.

--- a/src/messages/develop/relationships/2001 - Initiate Relationship.yaml
+++ b/src/messages/develop/relationships/2001 - Initiate Relationship.yaml
@@ -1,7 +1,7 @@
 code: 2001
 name: InitiateRelationship
 label: Initiate Relationship
-description: "A message used to initiate a new relationship between 2 or more parties. The M1 container specifies the sender tx input and requested participant tx outputs."
+description: "A message used to initiate a new relationship between 2 or more parties. The M1 container specifies the sender tx input and requested participant tx outputs. If there are more than 2 parties the encryption secret provided in the envelope protocol is used as the base encryption secret. If there are only 2 parties, then the ECDH secret of each key pair is used to encrypt each message."
 
 fields:
   - name: Type
@@ -16,11 +16,6 @@ fields:
   - name: SeedValue
     label: Seed Value
     description: "The seed value used to derive keys for the relationship."
-    type: varbin
-
-  - name: BaseEncryptionSecret
-    label: Base Encryption Secret
-    description: "The base encryption secret can be used to derive encryption secrets for the relationship. Each time a message is sent, the current seed hash is added to the base encryption secret and that value is used to encrypt the message. If this value is not specified then the encryption is done with ECDH secrets between the keys in the transaction."
     type: varbin
 
   - name: FlagValue
