--- a/src/messages/develop/types/IdentityOracleProof.yaml
+++ b/src/messages/develop/types/IdentityOracleProof.yaml
@@ -14,16 +14,10 @@ fields:
     description: "Address of entity contract. Can be used instead of a User ID. This field refers to the entity specified in the contract at the address specified."
     type: Address
 
-  # Not allowed by GDPR
-  # - name: Entity
-  #   label: Entity
-  #   description: "The entity data structure of the identity being proven used in the oracle signature hash."
-  #   type: varbin
-
-  - name: ValidityPeriod
-    label: Validity Period
-    description: "The time frame that the proof is valid."
-    type: Period
+  - name: Entity
+    label: Entity
+    description: "PII is not allowed in entity by GDPR, so only company information can be placed in this entity. In the future this might be supported for PII with better understanding of GDPR. The identity being provided."
+    type: varbin
 
   - name: OracleSignature
     label: OracleSignature
