--- a/src/messages/develop/types/OracleSignature.yaml
+++ b/src/messages/develop/types/OracleSignature.yaml
@@ -15,6 +15,11 @@ fields:
     type: uint
     size: 4
 
+  - name: ValidityPeriod
+    label: Validity Period
+    description: "The time frame that the proof is valid."
+    type: Period
+
   - name: SignatureAlgorithm
     label: Signature Algorithm
     description: "The algorithm used by the oracle signature."
