--- a/src/messages/develop/relationships/2001 - Initiate Relationship.yaml
+++ b/src/messages/develop/relationships/2001 - Initiate Relationship.yaml
@@ -23,6 +23,15 @@ fields:
     description: "The flag value can optionally be used to identify messages in the relationship so that all members don't have to be tagged in each message. It isn't needed for two party relationships, but is recommended for relationships with more members. It will be included in it's own op return for all message transactions. It is recommended to be a random 20 byte value similar to public key hashes. The flag will be the Payload of an Envelope protocol message with a Payload Protocol ID of \"F\". If this value is not specified then there must be an output to the next key in the relationship chain for every member in the group."
     type: varbin
 
+  - name: EncryptionType
+    label: Encryption Type
+    description: "Type of encryption used for messages within the relationship. 0 - Encryption keys embedded in envelope protocol. 1 - Encryption key embedded in this message is used as base key for future messages. Used for relationships with more than 2 members so the encryption key doesn't have to be encrypted to each member in every message."
+    type: uint
+    size: 1
+    options:
+      - 0
+      - 1
+
   - name: ProofOfIdentityType
     label: Proof of Identity Type
     description: "The type/format of the sender's proof of identity."
