--- a/src/messages/develop/relationships/2004 - Relationship Amendment.yaml
+++ b/src/messages/develop/relationships/2004 - Relationship Amendment.yaml
@@ -4,9 +4,9 @@ label: Relationship Amendment
 description: "Amend a relationship. Add/Remove members. Modify permissions. This is encrypted with the current base encryption secret, but can provide a new base encryption secret that starts after this message."
 
 fields:
-  - name: SeedValue
-    label: Seed Value
-    description: "The new seed value used to derive keys for the relationship after this message."
+  - name: Seed
+    label: Seed
+    description: "The new seed used to derive keys for the relationship after this message."
     type: varbin
 
   - name: BaseEncryptionSecret
