NEX-452 Deprecate currency asset description field.

--- a/src/assets/develop/currency/CUR - Currency.yaml
+++ b/src/assets/develop/currency/CUR - Currency.yaml
@@ -29,10 +29,11 @@ fields:
 
   - name: Description
     label: Description
-    type: varchar
+    type: deprecated
     varSize: small
     example: Australian dollar
     span: full
+    description: "Deprecated because the currency asset should be distinguished by its meta data and contract."
 
   - name: Precision
     label: Precision
