--- a/src/templates/develop/private_company/Contract.yaml
+++ b/src/templates/develop/private_company/Contract.yaml
@@ -53,9 +53,9 @@ Permissions:
       - [Issuer, PhoneNumber]
       - [IssuerLogoURL]
       - [ContractOperator]
-      - [AdminOracle]
-      - [AdminOracleSignature]
-      - [AdminOracleSigBlockHeight]
+      - [AdminIdentityOracle]
+      - [AdminIdentityOracleSignature]
+      - [AdminIdentityOracleSigBlockHeight]
       - [ContractFee]
 
   - Name: Administrator Proposal Ordinary Resolution
