--- a/src/actions/develop/actions/A2 - Asset Creation.yaml
+++ b/src/actions/develop/actions/A2 - Asset Creation.yaml
@@ -119,9 +119,10 @@ fields:
     type: uint
     size: 4
     example: "456789"
+    notes: "Can't be changed by the administration, operator. Smart contract controls."
 
   - name: Timestamp
     label: Timestamp
     description: "Timestamp in nanoseconds of when the smart contract created the action."
     type: Timestamp
-    notes: "Cannot be changed by the administration or operator. Smart contract controls."
+    notes: "Can't be changed by the administration, operator. Smart contract controls."
