--- a/src/actions/develop/actions/C1 - Contract Offer.yaml
+++ b/src/actions/develop/actions/C1 - Contract Offer.yaml
@@ -60,8 +60,8 @@ fields:
 
   - name: ContractType
     label: Contract Type
-    description: "Describes the purpose of the contract."
-    type: varchar
+    description: "Deprecated for more specific type. Describes the purpose of the contract."
+    type: deprecated
     example: "Shareholder Agreement"
 
   - name: SupportingDocs
@@ -105,7 +105,7 @@ fields:
   - name: IssuerLogoURL
     label: Issuer Logo URL
     description: "The URL of the issuer's logo."
-    type: varchar
+    type: deprecated
     example: "https://example.com/images/logo.png"
 
   - name: ContractOperatorIncluded
@@ -115,23 +115,23 @@ fields:
 
   - name: ContractOperator
     label: Contract Operator
-    description: "An additional entity with operator access to the contract."
-    type: Entity
+    description: "Deprecated for operator entity contract address. An additional entity with operator access to the contract."
+    type: deprecated
 
-  - name: AdminOracle
+  - name: AdminIdentityOracle
     label: Administration Oracle
-    type: Oracle
-    description: "The oracle that provided the signature used to verify the administration's identity."
+    type: deprecated
+    description: "The oracle that provided the signature used to verify the administration's identity and association with a parent contract if one is specified."
 
-  - name: AdminOracleSignature
-    label: Administration Oracle Signature
-    type: varbin
+  - name: AdminIdentityOracleSignature
+    label: Administration Identity Oracle Signature
+    type: deprecated
     description: "The ECDSA signature provided by the oracle specified. The first input must correspond to the administration entity and, if a contract operator is included, the second input must correspond to the contract operator entity."
 
-  - name: AdminOracleSigBlockHeight
-    label: Administration Oracle Signature Block height
+  - name: AdminIdentityOracleSigBlockHeight
+    label: Administration Identity Oracle Signature Block height
     description: The block height of the block hash used in the oracle signature.
-    type: uint
+    type: deprecated
     size: 4
 
   - name: ContractFee
@@ -181,3 +181,33 @@ fields:
     label: Master Address
     description: "The address of the contract's master key. This key has the ability to change the active contract address in case of a security failure with the active contract key."
     type: Address
+
+  - name: EntityContract
+    label: Entity Contract
+    description: "The address of the contract's parent entity. This is optional for entity contracts, but required for asset and service contracts to identify the entity parent contract."
+    type: Address
+
+  - name: OperatorEntityContract
+    label: Operator Entity Contract
+    description: "The address for the operator's entity contract."
+    type: Address
+
+  - name: ContractType
+    label: Contract Type
+    description: "Describes the purpose of the contract. 0 - Entity, 1 - Asset"
+    type: uint 
+    size: 1
+    options:
+      - 0
+      - 1
+    example: 0
+
+  - name: Services
+    label: Services
+    description: The services provided by the contract entity.
+    type: Service[]
+
+  - name: AdminIdentityCertificates
+    label: Administrator Identity Certificates
+    description: "Certificates providing proof of administrator/operator identities."
+    type: AdminIdentityCertificate[]
