--- a/src/actions/develop/types/AdminIdentityCertificate.yaml
+++ b/src/actions/develop/types/AdminIdentityCertificate.yaml
@@ -9,8 +9,8 @@ description: >
   the certificate verifies that the administrator address is associated with that entity contract.
 
 fields:
-  - name: ServiceContractAddress
-    label: Service Contract Address
+  - name: EntityContract
+    label: Entity Contract
     description: "The entity contract address of the service on chain that defines the identity oracle."
     type: Address
 
