--- a/src/actions/develop/types/Oracle.yaml
+++ b/src/actions/develop/types/Oracle.yaml
@@ -20,8 +20,8 @@ fields:
     description: "Deprecated for service contract address. Length 0-255 bytes. 0 is not valid. Oracle Public Key (eg. Bitcoin Public key), used to confirm digital signed proofs for transfers.  Can also be the same public address that controls a Tokenized Oracle."
     type: deprecated
 
-  - name: OracleType
-    label: Oracle Type
+  - name: OracleTypes
+    label: Oracle Types
     description: "The type of the oracle. 0 = Identity, 1 = Authority, 2 = Event. More than one value can be included to specify the oracle has more than one type."
     type: uint[]
     size: 1
@@ -30,7 +30,7 @@ fields:
       - 1
       - 2
 
-  - name: ServiceContractAddress
-    label: Service Contract Address
-    description: "The contract address of the service contract on chain that defines the oracle."
+  - name: EntityContract
+    label: Entity Contract
+    description: "The entity contract address of the service on chain that defines the oracle."
     type: Address
