--- a/src/actions/develop/actions/C2 - Contract Formation.yaml
+++ b/src/actions/develop/actions/C2 - Contract Formation.yaml
@@ -93,6 +93,10 @@ fields:
     label: Issuer
     description: "The issuer of this contract."
     type: Entity
+    only_valid_when:
+      field_name: ContractType
+      values:
+        - 0
 
   - name: IssuerLogoURL
     label: Issuer Logo URL
@@ -187,6 +191,14 @@ fields:
     label: Entity Contract
     description: "The address of the contract's parent entity. This is optional for entity contracts, but required for asset and service contracts to identify the entity parent contract."
     type: Address
+    only_valid_when:
+      field_name: ContractType
+      values:
+        - 1
+    required_when:
+      field_name: ContractType
+      values:
+        - 1
 
   - name: OperatorEntityContract
     label: Operator Entity Contract
@@ -207,6 +219,10 @@ fields:
     label: Services
     description: The services provided by the contract entity.
     type: Service[]
+    only_valid_when:
+      field_name: ContractType
+      values:
+        - 0
 
   - name: AdminIdentityCertificates
     label: Administrator Identity Certificates
