--- a/src/actions/develop/types/AssetReceiver.yaml
+++ b/src/actions/develop/types/AssetReceiver.yaml
@@ -42,3 +42,8 @@ fields:
     description: The block height of the block hash used in the oracle signature.
     type: uint
     size: 4
+
+  - name: OracleSigExpiry
+    label: Oracle Signature Expiry
+    description: "This specifies the time at which the Oracle signature expires."
+    type: Timestamp
