--- a/src/actions/develop/actions/C1 - Contract Offer.yaml
+++ b/src/actions/develop/actions/C1 - Contract Offer.yaml
@@ -122,17 +122,17 @@ fields:
     description: "Deprecated for operator entity contract address. An additional entity with operator access to the contract."
     type: deprecated
 
-  - name: AdminIdentityOracle
-    label: Administration Oracle
+  - name: AdminOracle
+    label: Administration Identity Oracle
     type: deprecated
     description: "The oracle that provided the signature used to verify the administration's identity and association with a parent contract if one is specified."
 
-  - name: AdminIdentityOracleSignature
+  - name: AdminOracleSignature
     label: Administration Identity Oracle Signature
     type: deprecated
     description: "The ECDSA signature provided by the oracle specified. The first input must correspond to the administration entity and, if a contract operator is included, the second input must correspond to the contract operator entity."
 
-  - name: AdminIdentityOracleSigBlockHeight
+  - name: AdminOracleSigBlockHeight
     label: Administration Identity Oracle Signature Block height
     description: The block height of the block hash used in the oracle signature.
     type: deprecated
