--- a/src/actions/develop/actions/A1 - Asset Definition.yaml
+++ b/src/actions/develop/actions/A1 - Asset Definition.yaml
@@ -33,9 +33,8 @@ fields:
 
   - name: TransfersPermitted
     label: Transfers Permitted
-    description: "Set to true if transfers are permitted between two parties, otherwise set to false to prevent peer-to-peer transfers."
-    type: bool
-    example: 1
+    description: "Deprecated to move into specific asset types. Set to true if transfers are permitted between two parties, otherwise set to false to prevent peer-to-peer transfers."
+    type: deprecated
 
   - name: TradeRestrictionsDeprecated
     label: Trade Restrictions
@@ -84,8 +83,8 @@ fields:
       - 1
     example: "1"
 
-  - name: TokenQty
-    label: Token Quantity
+  - name: AuthorizedTokenQty
+    label: Authorized Token Quantity
     description: "The number of tokens to issue with this asset. Set to greater than zero for fungible tokens. If the value is 1 then it becomes a non-fungible token, where the contract would have many assets. Set to 0 to represent a placeholder asset, where tokens are to be issued later, or to represent a decomissioned asset where all tokens have been revoked."
     type: uint
     size: 8
