--- a/src/assets/develop/currency/CCY - Currency.yaml
+++ b/src/assets/develop/currency/CCY - Currency.yaml
@@ -1,8 +1,8 @@
 #
-# CUR - Currency
+# CCY - Currency
 #
 
-code: CUR
+code: CCY
 name: Currency
 label: Currency
 description: Currency, fiat money, cash.  Issued by a monetary authority (eg. Reserve Bank of Australia, ECB, Bank of England).  Currency is free of counterparty risk except for the risks associated with the management of the currency by the monetary authority and its recognition as acceptable legal tender by the market and associated government(s).  Custody of currency must be backed by a 1:1 ratio, or a full reserve. A currency asset type should be considered the digital equivalent of physical cash.
