--- a/src/assets/develop/security/SHC - Common Share.yaml
+++ b/src/assets/develop/security/SHC - Common Share.yaml
@@ -41,3 +41,8 @@ fields:
     span: full
     displayOrder: 1
     required: true
+
+  - name: TransfersPermitted
+    label: Transfers Permitted
+    description: "Set to true if transfers are permitted between two parties, otherwise set to false to prevent peer-to-peer transfers."
+    type: bool
