--- a/src/assets/develop/utility/CHP - Casino Chip.yaml
+++ b/src/assets/develop/utility/CHP - Casino Chip.yaml
@@ -55,3 +55,8 @@ fields:
     example: 100
     span: full
     required: true
+
+  - name: TransfersPermitted
+    label: Transfers Permitted
+    description: "Set to true if transfers are permitted between two parties, otherwise set to false to prevent peer-to-peer transfers."
+    type: bool
