--- a/src/assets/develop/utility/COU - Coupon.yaml
+++ b/src/assets/develop/utility/COU - Coupon.yaml
@@ -79,3 +79,8 @@ fields:
       field_name: Value
     required_when:
       field_name: Value
+
+  - name: TransfersPermitted
+    label: Transfers Permitted
+    description: "Set to true if transfers are permitted between two parties, otherwise set to false to prevent peer-to-peer transfers."
+    type: bool
