--- a/src/templates/develop/private_company/assets/Common Share.yaml
+++ b/src/templates/develop/private_company/assets/Common Share.yaml
@@ -12,12 +12,12 @@ Permissions:
       - Special Resolution
     Fields:
       - [AssetPermissions]
-      - [TransfersPermitted]
+      - [AssetPayload, TransfersPermitted]
       - [VotingRights]
       - [VoteMultiplier]
       - [AdministrationProposal]
       - [HolderProposal]
-      - [TokenQty]
+      - [AuthorizedTokenQty]
       - [AssetPayload, Ticker]
       - [AssetPayload, ISIN]
       - [AssetPayload, Description]
