--- a/src/templates/develop/private_company/assets/Coupon.yaml
+++ b/src/templates/develop/private_company/assets/Coupon.yaml
@@ -12,7 +12,7 @@ Permissions:
       - Special Board Resolution
     Fields:
       - [AssetPermissions]
-      - [TransfersPermitted]
+      - [AssetPayload, TransfersPermitted]
       - [TradeRestrictions]
       - [EnforcementOrdersPermitted]
       - [VotingRights]
@@ -28,7 +28,7 @@ Permissions:
     AdministrativeMatter: false
     VotingSystemsAllowed:
     Fields:
-      - [TokenQty]
+      - [AuthorizedTokenQty]
       - [AssetPayload, RedeemingEntity]
       - [AssetPayload, IssueDate]
       - [AssetPayload, ExpiryDate]
