--- a/src/templates/develop/private_company/assets/Membership.yaml
+++ b/src/templates/develop/private_company/assets/Membership.yaml
@@ -1,6 +1,6 @@
 # Membership Asset (eg. Administrator/Director/Partner)
 Name: Membership
-AssetType: MEM
+AssetType: MBR
 
 Permissions:
   - Name: Administrator/Holder Special Board Resolution
@@ -12,12 +12,12 @@ Permissions:
       - Special Board Resolution
     Fields:
       - [AssetPermissions]
-      - [TransfersPermitted]
+      - [AssetPayload, TransfersPermitted]
       - [VotingRights]
       - [VoteMultiplier]
       - [AdministrationProposal]
       - [HolderProposal]
-      - [TokenQty]
+      - [AuthorizedTokenQty]
       - [AssetPayload, AgeRestriction]
       - [AssetPayload, ValidFrom]
 
