--- a/src/actions/develop/actions/C1 - Contract Offer.yaml
+++ b/src/actions/develop/actions/C1 - Contract Offer.yaml
@@ -45,7 +45,7 @@ fields:
     description: >
       0 - No Body of agreement included
       1 - SHA-256 Hash
-      2 - Tokenized Body of Agreement Format where the agreement is specified with a separate B1/B2 
+      2 - Tokenized Body of Agreement Format where the agreement is specified with a separate C6/C7 
       action
     type: uint
     size: 1
@@ -61,10 +61,14 @@ fields:
     description: >
       SHA-256 hash of the body of the agreement (full contract in pdf format or the like) or the 
       full agreement. If BodyOfAgreementType is 2 then this field is empty and the agreement is 
-      specified in a B1/B2 action. This is specific to the smart contract and relevant Assets. Legal 
+      specified in a C6/C7 action. This is specific to the smart contract and relevant Assets. Legal 
       and technical information.
     type: varbin
     varSize: medium
+    only_valid_when:
+      field_name: BodyOfAgreementType
+      values:
+        - 1
 
   - name: ContractType
     label: Contract Type
